# subdetector

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/subdetector/: __init__.py  detector.py
src/subdetector.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
