[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "subdetector"
version = "0.1.0"
description = "A tool to detect subtitle languages in media files"
readme = "README.md"
authors = [
    {name = "Regixxxx", email = "dateague627@gmail.com"}
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "langdetect",
    "pillow",
    "pytesseract",
]
requires-python = ">=3.7"

[project.urls]
"Homepage" = "https://github.com/regix1/subdetector"
"Bug Tracker" = "https://github.com/regix1/subdetector/issues"

[project.scripts]
subdetector = "subdetector.detector:main"